--- a/student-checkout/package.json
+++ b/student-checkout/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
-    "@supabase/Bolt Database-js": "^2.83.0",
+    "@supabase/supabase-js": "^2.83.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
