--- a/student-checkout/package.json
+++ b/student-checkout/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.83.0",
     "lucide-react": "^0.344.0",
+    "netlify-identity-widget": "^1.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.2",
