Admin: require gender/class; bulk upload format; ActivityLog fixes + date filters + PDF export; add serverless PDF generator

--- a/student-checkout/package.json
+++ b/student-checkout/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
